# culvert

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  fuzz.yml  publish.yml
doc/: architecture.md  roadmap.md  setup.md  testing.md
examples/scdc/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: ced.rs  status_flags.rs
src/: lib.rs
src/client/: ced.rs  frl.rs  mod.rs  plumbob_client.rs  scrambling.rs  test_transport.rs  update.rs  version.rs
src/error/: mod.rs
src/register/: address.rs  mod.rs
tests/: scdc.rs
