[package]
name = "culvert"
version = "0.1.0"
edition = "2024"

[features]
plumbob = ["dep:plumbob"]

[dependencies]
display-types = { version = "0.3.1", default-features = false }
hdmi-hal = { version = "0.2.0", default-features = false }
plumbob = { version = "0.1.0", optional = true }

[dev-dependencies]
hdmi-hal = { version = "0.2.0", default-features = false }
