[package]
name = "culvert"
version = "0.1.2"
edition = "2024"
rust-version = "1.85"
description = "Typed access to the HDMI 2.1 SCDC register map"
readme = "README.md"
license = "MPL-2.0"
repository = "https://github.com/DracoWhitefire/culvert"
keywords = ["hdmi", "scdc", "frl", "embedded", "no-std"]
categories = ["hardware-support", "embedded", "no-std"]

[package.metadata.docs.rs]
all-features = true

[features]
plumbob = ["dep:plumbob"]

[dependencies]
display-types = { version = "0.3.1", default-features = false }
hdmi-hal = { version = "0.3.0", default-features = false }
plumbob = { version = "0.1.0", optional = true }

[dev-dependencies]
hdmi-hal = { version = "0.3.0", default-features = false }
